changed font of h2 in locations section in mobile view

--- a/style.css
+++ b/style.css
@@ -392,7 +392,8 @@ footer ul {
 }
 @media (max-width: 480px) {
   .locations-head h2 {
-    font-size: 5rem;
+    font-size: 350%;
+    margin-top: 2rem;
   }
 }
 @media (max-width: 480px) {
